--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ header .profileLogo .logoPlaceholder {
 	width: 187px;
 	text-align: center;
 }
-profilePhoto > img{
+.profilePhoto > img{
 border-radius: 100%;
 }
 header .logoPlaceholder span {
