--- a/index.css
+++ b/index.css
@@ -30,8 +30,9 @@ header .profileLogo .logoPlaceholder {
 	width: 187px;
 	text-align: center;
 }
-.profilePhoto > img{
-border-radius: 100%;
+#proImg{
+    width: 100%;
+    border-radius: 100%;
 }
 header .logoPlaceholder span {
 	width: 80px;
